--- a/_includes/header.html
+++ b/_includes/header.html
@@ -43,12 +43,12 @@
     </nav>
 
     <!-- Header -->
-    <header>
+    <header style="background-image: url('/img/header-bg.jpg');">
         <div class="container">
             <div class="intro-text">
                 <div class="intro-lead-in">Welcome To Our Studio!</div>
                 <div class="intro-heading">It's Nice To Meet You</div>
-                <a href="#services" class="page-scroll btn btn-xl">Tell Me More</a>
+                <a href="#objectives" class="page-scroll btn btn-xl">Tell Me More</a>
             </div>
         </div>
     </header>
