--- a/_includes/services.html
+++ b/_includes/services.html
@@ -14,7 +14,7 @@
                         <i class="fa fa-map fa-stack-1x fa-inverse"></i>
                     </span>
 		    <h4 class="service-heading">Record</h4>
-                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+                    <p class="text-muted">Record your custom track with our easy-to-use mobile phone app.</p>
                 </div>
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
@@ -22,7 +22,7 @@
                         <i class="fa fa-pencil-square-o fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">Polish</h4>
-                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+                    <p class="text-muted">Add markers and text notes to the track in the Web app. </p>
                 </div>
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
@@ -30,7 +30,7 @@
                         <i class="fa fa-gear fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">Generate</h4>
-                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+                    <p class="text-muted">Click "generate" to get your new roadbook!</p>
                 </div>
             </div>
         </div>
