added user interviews post, updated timeline

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -58,11 +58,25 @@
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
-                                    <h4>31.10 - 7.10</h4>
+                                    <h4>31.10 - 7.11</h4>
                                     <h4 class="subheading">Milestone 3 - Landing page</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">We created an initial version of our landing page.</p>
+                                    <p class="text-muted">We created an initial version of our wireframe and landing page.</p>
+                                </div>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="timeline-image">
+                                <img class="img-circle img-responsive" src="img/about/check.png" alt="">
+                            </div>
+                            <div class="timeline-panel">
+                                <div class="timeline-heading">
+                                    <h4>7.11 - 14.11</h4>
+                                    <h4 class="subheading">Milestone 4 - User persona, User stories, User interviews</h4>
+                                </div>
+                                <div class="timeline-body">
+                                    <p class="text-muted">We created a user persona and we designed some use cases for our application. We also approached a few of our potential customers. So far, we managed to perform 2 phone interviews.</p>
                                 </div>
                             </div>
                         </li>
