--- a/_includes/modals.html
+++ b/_includes/modals.html
@@ -16,10 +16,10 @@
                             <hr class="star-primary">
                             <p>{{ post.description }}</p>
                             <p>{{ post.content }}</p>
-                            <img src="img/portfolio/{{ post.img }}" class="img-responsive img-centered" alt="{{ post.alt }}">
-                            <img src="img/portfolio/{{ post.img1 }}" class="img-responsive img-centered" alt="{{ post.alt }}">
-                            <img src="img/portfolio/{{ post.img2 }}" class="img-responsive img-centered" alt="{{ post.alt }}">
-                            <img src="img/portfolio/{{ post.img3 }}" class="img-responsive img-centered" alt="{{ post.alt }}">
+                            <img src="img/portfolio/{{ post.img }}" class="img-responsive img-centered" alt="">
+                            <img src="img/portfolio/{{ post.img1 }}" class="img-responsive img-centered" alt="">
+                            <img src="img/portfolio/{{ post.img2 }}" class="img-responsive img-centered" alt="">
+                            <img src="img/portfolio/{{ post.img3 }}" class="img-responsive img-centered" alt="">
                             <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
                         </div>
                     </div>
