added initial version of the updated fiki page

--- a/_includes/services.html
+++ b/_includes/services.html
@@ -13,24 +13,24 @@
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
                         <i class="fa fa-map fa-stack-1x fa-inverse"></i>
                     </span>
-		    <h4 class="service-heading">Record</h4>
-                    <p class="text-muted">Record your custom track with our easy-to-use mobile phone app.</p>
+		    <h4 class="service-heading">Import GPX</h4>
+                    <p class="text-muted">Import the GPX file containing the waypoints of your track.</p>
                 </div>
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
                         <i class="fa fa-pencil-square-o fa-stack-1x fa-inverse"></i>
                     </span>
-                    <h4 class="service-heading">Polish</h4>
-                    <p class="text-muted">Add markers and text notes to the track in the Web app. </p>
+                    <h4 class="service-heading">Generate</h4>
+                    <p class="text-muted">Click "generate" to get your new roadbook!</p>
                 </div>
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
                         <i class="fa fa-gear fa-stack-1x fa-inverse"></i>
                     </span>
-                    <h4 class="service-heading">Generate</h4>
-                    <p class="text-muted">Click "generate" to get your new roadbook!</p>
+                    <h4 class="service-heading">View and edit</h4>
+                    <p class="text-muted">Your roadbook will be displayed. Double tap if you need to edit any part of the document.</p>
                 </div>
             </div>
         </div>
